[project]
name = "openenv-support"
version = "0.1.0"
description = "Customer support OpenEnv environment"
authors = [{ name = "Sai" }]
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "openenv-core>=0.2.0"
]

[project.scripts]
server = "server.app:main"

[tool.openenv]
entry_point = "server.app:main"